[project]
name = "DSCI641"
# Version bumped as we update dependencies
version = "2025.1.3"
description = "Example code for Drexel University DSCI 641"
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
readme = "README.md"
# Not all dependencies have been upgraded for Python 3.13
requires-python = ">=3.11,<3.13"
dependencies = [
  # core data processing dependencies
  "numpy ~=2.0",
  "pandas ~=2.0",
  "pyarrow >=18",
  "dvc[webdav] ~=3.0",
  # LensKit
  "lenskit >=2025.1.1b2",
  "lenskit-implicit >=2025.1.1b2",
  # analysis and reporting
  "ipykernel >=6",
  "jupytext ~=1.16",
  "seaborn ~=0.13.2",
  # script libraries
  "docopt-ng >=0.9",
  "humanize ~=4.10",
  "zstandard >=0.23",
  "lightfm ==1.17",
  "pydantic ~=2.10.6"
]

[dependency-groups]
dev = [
  "ruff >=0.4",
  "pyright ~=1.1",
]

# support both CPU and GPU environmetn specifications
[project.optional-dependencies]
# full Jupyter installation
jupyter = [
  # "juptyerlab >=4.3",
  "notebook ~=7.3",
]
cpu = [
  "torch~=2.5",
]
gpu = [
  "torch~=2.5",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# code formatting and linting tools
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401"]
exclude = [".git", "__pycache__", "build", "dist", ".pixi", ".venv"]

[tool.pyright]
exclude = [".pixi", ".venv"]
